[package]
name = "uroj"
version = "0.1.0"
authors = ["satanya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="uroj"
path="src/main.rs"

[dependencies]
clap = "2.33"
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5"
serde = "1"

[dependencies.uroj-api]
path = "uroj-api"

[dependencies.uroj-core]
path = "uroj-core"

[workspace]
members = ["uroj-api", "uroj-core"]