[package]
name = "uroj-api"
version = "0.1.0"
authors = ["satanya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1"
serde_yaml ="0.8"
actix-web = "3"
async-graphql = {version = "2", features = ["chrono", "dataloader"]}
async-graphql-actix-web = "2" # 如果你需要集成到Actix-web
uuid = {version = "0.8", features = ["serde", "v4"]}
dotenv = "0"
bcrypt = "0.9"
chrono = { version = "0.4", features = ["serde"] }
strum = ""
strum_macros = ""
rand = ""
tarpc = { version = "0.26", features = ["full"] }

[dependencies.uroj-common]
path = "../uroj-common"

[dependencies.uroj-db]
path = "../uroj-db"