[package]
name = "uroj-auth"
version = "0.1.0"
authors = ["satanya <admin@sozr.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0"
actix-web = "3"
actix-cors = "0.5"
async-graphql = {version = "2", features = ["chrono", "dataloader"]}
async-graphql-actix-web = "2" # 如果你需要集成到Actix-web
serde = "1"
chrono = { version = "0", features = ["serde"] }
strum = "0"
strum_macros = "0"
bcrypt = "0"

[dependencies.uroj-common]
path = "../uroj-common"

[dependencies.uroj-db]
path = "../uroj-db"