[package]
name = "uroj-common"
version = "0.1.0"
authors = ["satanya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "7"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
strum = "0"
strum_macros = "0"
tokio-serde = { version = "0.8", features = ["json"] }
