[package]
name = "uroj-db"
version = "0.1.0"
authors = ["satanya <admin@sozr.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1", features = ["postgres", "r2d2", "chrono", "uuidv07"]}
diesel_migrations ="1"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = "0.8.2"

