[package]
name = "uroj-models"
version = "0.1.0"
authors = ["satanya <admin@sozr.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
dotenv = "0.15.0"
wither = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"