[package]
name = "uroj-runtime"
version = "0.1.0"
authors = ["satanya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
petgraph = "*"

[dependencies.uroj-common]
path = "../uroj-common"