[package]
name = "uroj-runtime"
version = "0.1.0"
authors = ["satanya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = "0.1"
petgraph = "*"
serde="1"
actix-web = "3"
async-graphql = {version = "2", features = ["chrono", "dataloader"]}
async-graphql-actix-web = "2" # 如果你需要集成到Actix-web
async-stream = "0"
strum = "0"
strum_macros = "0"
futures = "0"
dotenv = "0"
serde_json = ""
lazy_static = ""
uuid = ""
serde_yaml = "0.8"
actix-cors = "0.5.4"
log = "0.4.14"
env_logger = "*"

[dependencies.uroj-common]
path = "../uroj-common"

[dependencies.uroj-db]
path = "../uroj-db"